--- a/views/pages/gb.ejs
+++ b/views/pages/gb.ejs
@@ -653,7 +653,9 @@
                     <h4>Technical</h4>
                     <span class="title-1">Skills</span>
                 </div>
-
+                <div class="progress-bar">
+                    <div class="progress" data-percentage="80"></div>
+                </div>
                 <div class="column-list">
                     <div class="column-box">
                         <div class="accordion-item">
@@ -725,7 +727,7 @@
                                     </div>
 
                                     <div class="tooltip">
-                                        <a href="https://affinity.serif.com/en-us/designer/" target="_blank">
+                                        <a href="https://threejs.org/" target="_blank">
                                             <img src="/assets/svg/tech-stack/three-js.svg" alt="Three.js">
                                         </a>
                                         
@@ -733,7 +735,7 @@
                                     </div>
 
                                     <div class="tooltip">
-                                        <a href="https://affinity.serif.com/en-us/designer/" target="_blank">
+                                        <a href="https://getbootstrap.com/" target="_blank">
                                             <img src="/assets/svg/tech-stack/bootstrap.svg" alt="Bootstrap">
                                         </a>
                                         
@@ -741,7 +743,7 @@
                                     </div>
 
                                     <div class="tooltip">
-                                        <a href="https://affinity.serif.com/en-us/designer/" target="_blank">
+                                        <a href="https://tailwindui.com/" target="_blank">
                                             <img src="/assets/svg/tech-stack/tailwind-css.svg" alt="Tailwind CSS">
                                         </a>
                                         
@@ -749,7 +751,7 @@
                                     </div>
 
                                     <div class="tooltip">
-                                        <a href="https://affinity.serif.com/en-us/designer/" target="_blank">
+                                        <a href="https://www.npmjs.com/" target="_blank">
                                             <img src="/assets/svg/tech-stack/npm.svg" alt="NPM">
                                         </a>
                                         
@@ -757,7 +759,7 @@
                                     </div>
 
                                     <div class="tooltip">
-                                        <a href="https://affinity.serif.com/en-us/designer/" target="_blank">
+                                        <a href="https://nodejs.org/en" target="_blank">
                                             <img src="/assets/svg/tech-stack/node-js.svg" alt="Node.js">
                                         </a>
                                         
@@ -765,7 +767,7 @@
                                     </div>
 
                                     <div class="tooltip">
-                                        <a href="https://affinity.serif.com/en-us/designer/" target="_blank">
+                                        <a href="https://expressjs.com/" target="_blank">
                                             <img src="/assets/svg/tech-stack/express-js.svg" alt="Express.js">
                                         </a>
                                         
@@ -773,7 +775,7 @@
                                     </div>
 
                                     <div class="tooltip">
-                                        <a href="https://affinity.serif.com/en-us/designer/" target="_blank">
+                                        <a href="https://ejs.co/" target="_blank">
                                             <img src="/assets/svg/tech-stack/ejs.svg" alt="EJS">
                                         </a>
                                         
