--- a/public/css/components.css
+++ b/public/css/components.css
@@ -238,6 +238,12 @@ span { display: block; }
     margin: 0.5rem 0;
 }
 
+.accordion-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
 .accordion-container img {
     width: 1rem;
 }
@@ -260,18 +266,22 @@ span { display: block; }
 
 .progress-bar {
     width: 100%;
-    height: 1rem;
+    height: 0.5rem;
     background-color: #f3f3f3;
+    padding: 2px;
     border-radius: 10px;
     position: relative;
 }
 
 .progress {
     height: 100%;
-    background-color: #4caf50;
-    border-radius: 4px;
+    background-color: black;
     width: 0; /* Default width */
-    transition: width 0.3s; /* Smooth transition for width change */
+    border-radius: 10px;
+}
+
+.skills-header {
+
 }
 
 
