--- a/views/pages/gb.ejs
+++ b/views/pages/gb.ejs
@@ -40,7 +40,7 @@
 
         <div class="two-columns">
             <div class="container">
-                <img src="/assets/img/wall-street-plates.png" alt="portrait image">
+                <img src="/assets/img/wall-street-plates.png" alt="wall street plate">
             </div>
 
             <div class="container">
@@ -562,7 +562,7 @@
 
         <div class="two-columns">
             <div class="container">
-                <img src="/assets/img/rubics-cube.png" alt="pile of books">
+                <img src="/assets/img/rubics-cube.png" alt="rubics cube">
             </div>
 
             <div class="container">
@@ -663,12 +663,6 @@
                                 <div class="accordion-container">
                                     <span class="gray-1">Since 2022</span>
                                     <span class="white-2">Web Development</span>
-                                </div>
-
-                                <div class="accordion-container">
-                                    <div class="progress-bar">
-                                        <div class="progress" data-percentage="80"></div>
-                                    </div>
                                 </div>
 
                                 <div class="accordion-container">
