--- a/views/pages/gb.ejs
+++ b/views/pages/gb.ejs
@@ -21,7 +21,7 @@
                 Technique d'Ettelbruck" with a focus on Commerce and Administration.
                 </p>
                 <div class="btn-link">
-                    <a href="assets/pdf/1GCC-élève-méritant.pdf" download="1GCC-élève-méritant.pdf" class="download-button">Download CV</a>
+                    <a href="/assets/pdf/1GCC-élève-méritant.pdf" download="1GCC-élève-méritant.pdf" class="download-button">Download CV</a>
                 </div>
             </div>
         </div>
@@ -78,7 +78,7 @@
                                     A distinction awarded to students with outstanding marks
                                     and examplary behavior.
                                 </p>
-                                <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/link.svg" alt="link symbol"></a>
+                                <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </li>
                         </ul>
                     </div>
@@ -92,7 +92,7 @@
                                     A distinction awarded to students with outstanding marks
                                     and examplary behavior.
                                 </p>
-                                <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/link.svg" alt="link symbol"></a>
+                                <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </li>
                         </ul>
                     </div>
@@ -106,7 +106,7 @@
                                     A distinction awarded to students with outstanding marks
                                     and examplary behavior.
                                 </p>
-                                <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/link.svg" alt="link symbol"></a>
+                                <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </li>
                         </ul>
                     </div>
@@ -263,11 +263,11 @@
 
                 <div class="column-list">
                     <div class="column-box">
-                        <img src="/assets/svg/ltett-logo.svg" alt="Ltett logo">
+                        <img src="/assets/svg/logos/ltett-logo.svg" alt="Ltett logo">
                         <span class="gray-1">Lycée Technique d'Ettelbruck</span>
                         <span class="white-2">Division of Commerce and Administration</span>
                         <span class="white-3">4GCM, 3GCM, 2GCC & 1GCC</span>
-                        <a href="https://www.ltett.lu/" class="normal-link" target="_blank">www.ltett.lu<img src="/assets/svg/link.svg" alt="link symbol"></a>
+                        <a href="https://www.ltett.lu/" class="normal-link" target="_blank">www.ltett.lu<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                         <p>
                             <b>Graduated:</b> 6 July 2024
                         </p>
@@ -426,7 +426,7 @@
 
         <div class="two-columns">
             <div class="container">
-                <img src="/assets/img/pocket-watch.png" alt="pile of books">
+                <img src="/assets/img/pocket-watch.png" alt="pocket watch">
             </div>
 
             <div class="container">
@@ -457,7 +457,7 @@
                 </div>
                 <div class="column-list">
                     <div class="column-box">
-                        <img src="/assets/svg/lampertz-stone-designer-logo.svg" alt="Lampertz Logo">
+                        <img src="/assets/svg/logos/lampertz-stone-designer-logo.svg" alt="Lampertz Logo">
                         <span class="gray-1">Informational Internship</span>
                         <span class="white-2">Lampertz Stone Designer</span>
                         <p>
@@ -508,7 +508,7 @@
 
                 <div class="column-list">
                     <div class="column-box">
-                        <img src="/assets/svg/pharmacie-hosingen-logo.svg" alt="Pharmacie Hosingen Logo">
+                        <img src="/assets/svg/logos/pharmacie-hosingen-logo.svg" alt="Pharmacie Hosingen Logo">
                         <span class="gray-1">Information Internship</span>
                         <span class="white-2">Lampertz Stone Designer</span>
                         <p>
@@ -666,7 +666,7 @@
                                 </div>
 
                                 <div class="accordion-container">
-                                    <img src="/assets/svg/plus-symbol-logo.svg" alt="">
+                                    <img src="/assets/svg/logos/plus-symbol-logo.svg" alt="">
                                 </div>
                             </button>
 
