--- a/views/pages/gb.ejs
+++ b/views/pages/gb.ejs
@@ -796,7 +796,7 @@
 
         <div class="two-columns">
             <div class="container">
-                <img src="/assets/img/books.png" alt="pile of books">
+                <img src="/assets/img/book.png" alt="pile of books">
             </div>
 
             <div class="container">
