--- a/views/pages/gb.ejs
+++ b/views/pages/gb.ejs
@@ -6,7 +6,7 @@
     <div class="wrapper">
         <div class="two-columns">
             <div class="container">
-                <img src="/assets/img/cv-image.png" alt="Portait Image">
+                <img src="/assets/img/portrait-cv.png" alt="Portait Image">
             </div>
     
             <div class="container">
