--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,7 +20,7 @@
 
                 <div class="container">
                     <div class="flexbox-flag">
-                        <a href="/gb"><img src="/assets/svg/logos/gb.svg" alt="flag of the United Kingdom"></a>
+                        <a href="/en"><img src="/assets/svg/logos/gb.svg" alt="flag of the United Kingdom"></a>
                         <a href="/fr"><img src="/assets/svg/logos/fr.svg" alt="flag of France"></a>
                         <a href="/de"><img src="/assets/svg/logos/de.svg" alt="flag of Germany"></a>
                     </div>
