--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -572,7 +572,9 @@
                         <span>relevant to the</span>
                         <span>financial sector</span>
                     </h3>
+
                     <h5>Key Skills for Financial Analysis and Business Success</h5>
+
                     <p>
                         My educational journey has equipped me with crucial hard skills essential for 
                         success in the financial sector. I have developed strong analytical abilities 
@@ -581,6 +583,42 @@
                         clarity and accuracy in communication. Additionally, I am proficient in key financial 
                         software and tools.
                     </p>
+
+                    <div class="accordion-item">
+                        <button class="accordion-header" aria-expanded="false">
+                            <div class="accordion-container">
+                                <span class="white-2">Skill Level Assessment</span>
+                            </div>
+
+                            <div class="accordion-container">
+                                <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                            </div>
+                        </button>
+
+                        <div class="accordion-content" hidden>
+                            <ul class="skills-list">
+                                <li>A1 (Basic): Beginner level with fundamental knowledge or skill</li>
+                                <li>A2 (Basic+): Can perform simple tasks with guidance</li>
+                                <li>B1 (Intermediate): Competent in everyday tasks with some independence</li>
+                                <li>B2 (Intermediate+): Proficient in more complex tasks with autonomy</li>
+                                <li>C1 (Advanced): Expert-level with deep understanding and ability to innovate or solve complex problems</li>
+                                <li>C2 (Mastery): Thought leader or recognized expert, capable of mentoring others and leading in the field</li>
+                            </ul>
+                            
+                            <span class="gray-1">Tech Stack</span>
+
+                            <div class="tech-list">
+                                <div class="tooltip">
+                                    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
+                                        <img src="/assets/svg/tech-stack/html-5.svg" alt="Html 5">
+                                    </a>
+                                    
+                                    <span class="tooltiptext">HTML</span>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -591,51 +629,39 @@
                     <h4>Achademic</h4>
                     <span class="title-1">Skills</span>
                 </div>
+
                 <div class="column-list">
                     <div class="column-box">
                         <div class="accordion-item">
                             <button class="accordion-header" aria-expanded="false">
-                                More information
+                                <div class="accordion-container">
+                                    <span class="white-2">Skill Level Assessment</span>
+                                </div>
+
+                                <div class="accordion-container">
+                                    <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                                </div>
                             </button>
 
                             <div class="accordion-content" hidden>
-                                During my commerce studies, 
-                            </div>
-                        </div>
-                    </div>
+                                <ul class="skills-list">
+                                    <li>Developed static websites and basic web applications, emphasizing both functionality and aesthetically pleasing designs.</li>
+                                    <li>Applied knowledge of user experience (UX) principles to create intuitive interfaces, potentially valuable for creating client portals or internal financial dashboards.</li>
+                                    <li>Familiar with HTML, CSS, and JavaScript, enabling the development of web tools that can streamline financial operations or client interactions.</li>
+                                </ul>
 
-                    <div class="column-box">
-                        <div class="accordion-item">
-                            <button class="accordion-header" aria-expanded="false">
-                                More information
-                            </button>
+                                <span class="gray-1">Tech Stack</span>
 
-                            <div class="accordion-content" hidden>
-                                During my commerce studies, 
-                            </div>
-                        </div>
-                    </div>
+                                <div class="tech-list">
+                                    <div class="tooltip">
+                                        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
+                                            <img src="/assets/svg/tech-stack/html-5.svg" alt="Html 5">
+                                        </a>
+                                        
+                                        <span class="tooltiptext">HTML</span>
+                                    </div>
 
-                    <div class="column-box">
-                        <div class="accordion-item">
-                            <button class="accordion-header" aria-expanded="false">
-                                More information
-                            </button>
-
-                            <div class="accordion-content" hidden>
-                                During my commerce studies, 
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="column-box">
-                        <div class="accordion-item">
-                            <button class="accordion-header" aria-expanded="false">
-                                More information
-                            </button>
-
-                            <div class="accordion-content" hidden>
-                                During my commerce studies, 
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -659,12 +685,12 @@
                         <div class="accordion-item">
                             <button class="accordion-header" aria-expanded="false">
                                 <div class="accordion-container">
-                                    <span class="gray-1">Since 2022</span>
+                                    <span class="gray-1"><b>B1</b> Intermediate</span>
                                     <span class="white-2">Web Development</span>
                                 </div>
 
                                 <div class="accordion-container">
-                                    <img src="/assets/svg/logos/plus-symbol-logo.svg" alt="">
+                                    <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
                                 </div>
                             </button>
 
