--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -584,38 +584,40 @@
                         software and tools.
                     </p>
 
-                    <div class="accordion-item">
-                        <button class="accordion-header" aria-expanded="false">
-                            <div class="accordion-container">
-                                <span class="white-2">Skill Level Assessment</span>
-                            </div>
-
-                            <div class="accordion-container">
-                                <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
-                            </div>
-                        </button>
-
-                        <div class="accordion-content" hidden>
-                            <ul class="skills-list">
-                                <li>A1 (Basic): Beginner level with fundamental knowledge or skill</li>
-                                <li>A2 (Basic+): Can perform simple tasks with guidance</li>
-                                <li>B1 (Intermediate): Competent in everyday tasks with some independence</li>
-                                <li>B2 (Intermediate+): Proficient in more complex tasks with autonomy</li>
-                                <li>C1 (Advanced): Expert-level with deep understanding and ability to innovate or solve complex problems</li>
-                                <li>C2 (Mastery): Thought leader or recognized expert, capable of mentoring others and leading in the field</li>
-                            </ul>
-                            
-                            <span class="gray-1">Tech Stack</span>
-
-                            <div class="tech-list">
-                                <div class="tooltip">
-                                    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
-                                        <img src="/assets/svg/tech-stack/html-5.svg" alt="Html 5">
-                                    </a>
-                                    
-                                    <span class="tooltiptext">HTML</span>
+                    <div class="column-box">
+                        <div class="accordion-item">
+                            <button class="accordion-header" aria-expanded="false">
+                                <div class="accordion-container">
+                                    <span class="white-2">Skill Level Assessment</span>
                                 </div>
-
+    
+                                <div class="accordion-container">
+                                    <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                                </div>
+                            </button>
+    
+                            <div class="accordion-content" hidden>
+                                <ul class="skills-list">
+                                    <li>A1 (Basic): Beginner level with fundamental knowledge or skill</li>
+                                    <li>A2 (Basic+): Can perform simple tasks with guidance</li>
+                                    <li>B1 (Intermediate): Competent in everyday tasks with some independence</li>
+                                    <li>B2 (Intermediate+): Proficient in more complex tasks with autonomy</li>
+                                    <li>C1 (Advanced): Expert-level with deep understanding and ability to innovate or solve complex problems</li>
+                                    <li>C2 (Mastery): Thought leader or recognized expert, capable of mentoring others and leading in the field</li>
+                                </ul>
+    
+                                <span class="gray-1">Tech Stack</span>
+    
+                                <div class="tech-list">
+                                    <div class="tooltip">
+                                        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
+                                            <img src="/assets/svg/tech-stack/html-5.svg" alt="Html 5">
+                                        </a>
+                                        
+                                        <span class="tooltiptext">HTML</span>
+                                    </div>
+    
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -635,7 +637,8 @@
                         <div class="accordion-item">
                             <button class="accordion-header" aria-expanded="false">
                                 <div class="accordion-container">
-                                    <span class="white-2">Skill Level Assessment</span>
+                                    <div class="gray-1">C1 | Advanced</div>
+                                    <span class="white-2">Business Economics</span>
                                 </div>
 
                                 <div class="accordion-container">
@@ -645,9 +648,9 @@
 
                             <div class="accordion-content" hidden>
                                 <ul class="skills-list">
-                                    <li>Developed static websites and basic web applications, emphasizing both functionality and aesthetically pleasing designs.</li>
-                                    <li>Applied knowledge of user experience (UX) principles to create intuitive interfaces, potentially valuable for creating client portals or internal financial dashboards.</li>
-                                    <li>Familiar with HTML, CSS, and JavaScript, enabling the development of web tools that can streamline financial operations or client interactions.</li>
+                                    <li>Solid understanding of the economic, legal, fiscal, financial, and social decisions made by businesses.</li>
+                                    <li>Ability to critically assess business decisions, applicable in financial analysis, investment strategies, and business consulting.</li>
+                                    <li>Informed decision-making on asset management, considering legal and economic implications.</li>
                                 </ul>
 
                                 <span class="gray-1">Tech Stack</span>
@@ -655,12 +658,186 @@
                                 <div class="tech-list">
                                     <div class="tooltip">
                                         <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
-                                            <img src="/assets/svg/tech-stack/html-5.svg" alt="Html 5">
+                                            <img src="/assets/logos/ms-office.svg" alt="Html 5">
                                         </a>
                                         
-                                        <span class="tooltiptext">HTML</span>
+                                        <span class="tooltiptext">Microsoft 365</span>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
+                    <div class="column-box">
+                        <div class="accordion-item">
+                            <button class="accordion-header" aria-expanded="false">
+                                <div class="accordion-container">
+                                    <div class="gray-1">C1 | Advanced</div>
+                                    <span class="white-2">Business Economics</span>
+                                </div>
+
+                                <div class="accordion-container">
+                                    <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                                </div>
+                            </button>
+
+                            <div class="accordion-content" hidden>
+                                <ul class="skills-list">
+                                    <li>Solid understanding of the economic, legal, fiscal, financial, and social decisions made by businesses.</li>
+                                    <li>Ability to critically assess business decisions, applicable in financial analysis, investment strategies, and business consulting.</li>
+                                    <li>Informed decision-making on asset management, considering legal and economic implications.</li>
+                                </ul>
+
+                                <span class="gray-1">Tech Stack</span>
+
+                                <div class="tech-list">
+                                    <div class="tooltip">
+                                        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
+                                            <img src="/assets/logos/ms-office.svg" alt="Html 5">
+                                        </a>
+                                        
+                                        <span class="tooltiptext">Microsoft 365</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column-box">
+                        <div class="accordion-item">
+                            <button class="accordion-header" aria-expanded="false">
+                                <div class="accordion-container">
+                                    <div class="gray-1">C1 | Advanced</div>
+                                    <span class="white-2">Business Economics</span>
+                                </div>
+
+                                <div class="accordion-container">
+                                    <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                                </div>
+                            </button>
+
+                            <div class="accordion-content" hidden>
+                                <ul class="skills-list">
+                                    <li>Solid understanding of the economic, legal, fiscal, financial, and social decisions made by businesses.</li>
+                                    <li>Ability to critically assess business decisions, applicable in financial analysis, investment strategies, and business consulting.</li>
+                                    <li>Informed decision-making on asset management, considering legal and economic implications.</li>
+                                </ul>
+
+                                <span class="gray-1">Tech Stack</span>
+
+                                <div class="tech-list">
+                                    <div class="tooltip">
+                                        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
+                                            <img src="/assets/logos/ms-office.svg" alt="Html 5">
+                                        </a>
+                                        
+                                        <span class="tooltiptext">Microsoft 365</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column-box">
+                        <div class="accordion-item">
+                            <button class="accordion-header" aria-expanded="false">
+                                <div class="accordion-container">
+                                    <div class="gray-1">C1 | Advanced</div>
+                                    <span class="white-2">Business Economics</span>
+                                </div>
+
+                                <div class="accordion-container">
+                                    <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                                </div>
+                            </button>
+
+                            <div class="accordion-content" hidden>
+                                <ul class="skills-list">
+                                    <li>Solid understanding of the economic, legal, fiscal, financial, and social decisions made by businesses.</li>
+                                    <li>Ability to critically assess business decisions, applicable in financial analysis, investment strategies, and business consulting.</li>
+                                    <li>Informed decision-making on asset management, considering legal and economic implications.</li>
+                                </ul>
+
+                                <span class="gray-1">Tech Stack</span>
+
+                                <div class="tech-list">
+                                    <div class="tooltip">
+                                        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
+                                            <img src="/assets/logos/ms-office.svg" alt="Html 5">
+                                        </a>
+                                        
+                                        <span class="tooltiptext">Microsoft 365</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column-box">
+                        <div class="accordion-item">
+                            <button class="accordion-header" aria-expanded="false">
+                                <div class="accordion-container">
+                                    <div class="gray-1">C1 | Advanced</div>
+                                    <span class="white-2">Business Economics</span>
+                                </div>
+
+                                <div class="accordion-container">
+                                    <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                                </div>
+                            </button>
+
+                            <div class="accordion-content" hidden>
+                                <ul class="skills-list">
+                                    <li>Solid understanding of the economic, legal, fiscal, financial, and social decisions made by businesses.</li>
+                                    <li>Ability to critically assess business decisions, applicable in financial analysis, investment strategies, and business consulting.</li>
+                                    <li>Informed decision-making on asset management, considering legal and economic implications.</li>
+                                </ul>
+
+                                <span class="gray-1">Tech Stack</span>
+
+                                <div class="tech-list">
+                                    <div class="tooltip">
+                                        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
+                                            <img src="/assets/logos/ms-office.svg" alt="Html 5">
+                                        </a>
+                                        
+                                        <span class="tooltiptext">Microsoft 365</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column-box">
+                        <div class="accordion-item">
+                            <button class="accordion-header" aria-expanded="false">
+                                <div class="accordion-container">
+                                    <div class="gray-1">C1 | Advanced</div>
+                                    <span class="white-2">Business Economics</span>
+                                </div>
+
+                                <div class="accordion-container">
+                                    <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                                </div>
+                            </button>
+
+                            <div class="accordion-content" hidden>
+                                <ul class="skills-list">
+                                    <li>Solid understanding of the economic, legal, fiscal, financial, and social decisions made by businesses.</li>
+                                    <li>Ability to critically assess business decisions, applicable in financial analysis, investment strategies, and business consulting.</li>
+                                    <li>Informed decision-making on asset management, considering legal and economic implications.</li>
+                                </ul>
+
+                                <span class="gray-1">Tech Stack</span>
+
+                                <div class="tech-list">
+                                    <div class="tooltip">
+                                        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
+                                            <img src="/assets/logos/ms-office.svg" alt="Html 5">
+                                        </a>
+                                        
+                                        <span class="tooltiptext">Microsoft 365</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
