--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -607,7 +607,7 @@
                                 </ul>
 
                                 <p>For languages:</p>
-                                <a class="normal-link" href="https://www.coe.int/en/web/common-european-framework-reference-languages/" target="_blank">www.coe.int<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
+                                <a class="normal-link" href="https://cefr.eu/" target="_blank">www.coe.int<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </div>
                         </div>
                     </div>
@@ -860,7 +860,7 @@
                     <div class="accordion-item">
                         <button class="accordion-header" aria-expanded="false">
                             <div class="accordion-container">
-                                <div class="gray-1"><b>C2</b> Advanced</div>
+                                <div class="gray-1"><b>C2</b> Proficient</div>
                                 <span class="white-2">German</span>
                             </div>
 
@@ -871,22 +871,9 @@
 
                         <div class="accordion-content" hidden>
                             <ul class="skills-list">
-                                <li>Solid understanding of the economic, legal, fiscal, financial, and social decisions made by businesses.</li>
-                                <li>Ability to critically assess business decisions, applicable in financial analysis, investment strategies, and business consulting.</li>
-                                <li>Informed decision-making on asset management, considering legal and economic implications.</li>
+                                <li>Developed language and communication skills for use in academic, professional, and social contexts.</li>
+                                <li>Cultivated an appreciation for the aesthetics of the German language and literature, supporting roles that require bilingual communication or cultural sensitivity in German-speaking markets.</li>
                             </ul>
-
-                            <span class="gray-1">Tech Stack</span>
-
-                            <div class="tech-list">
-                                <div class="tooltip">
-                                    <a href="https://www.microsoft365.com/" target="_blank">
-                                        <img src="/assets/svg/logos/ms-office.svg" alt="Mircosoft 365">
-                                    </a>
-                                    
-                                    <span class="tooltiptext">Microsoft 365</span>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -906,22 +893,9 @@
 
                         <div class="accordion-content" hidden>
                             <ul class="skills-list">
-                                <li>Solid understanding of the economic, legal, fiscal, financial, and social decisions made by businesses.</li>
-                                <li>Ability to critically assess business decisions, applicable in financial analysis, investment strategies, and business consulting.</li>
-                                <li>Informed decision-making on asset management, considering legal and economic implications.</li>
+                                <li>Achieved proficiency in English, sufficient for integration into professional environments and higher education.</li>
+                                <li>Developed intercultural communication skills, critical for engaging with international clients, partners, and stakeholders in the financial sector.</li>
                             </ul>
-
-                            <span class="gray-1">Tech Stack</span>
-
-                            <div class="tech-list">
-                                <div class="tooltip">
-                                    <a href="https://www.microsoft365.com/" target="_blank">
-                                        <img src="/assets/svg/logos/ms-office.svg" alt="Mircosoft 365">
-                                    </a>
-                                    
-                                    <span class="tooltiptext">Microsoft 365</span>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -930,8 +904,8 @@
                     <div class="accordion-item">
                         <button class="accordion-header" aria-expanded="false">
                             <div class="accordion-container">
-                                <div class="gray-1"><b>C1</b> Advanced</div>
-                                <span class="white-2">Business Economics</span>
+                                <div class="gray-1"><b>B2</b> Upper Intermediate</div>
+                                <span class="white-2">French</span>
                             </div>
 
                             <div class="accordion-container">
@@ -941,22 +915,9 @@
 
                         <div class="accordion-content" hidden>
                             <ul class="skills-list">
-                                <li>Solid understanding of the economic, legal, fiscal, financial, and social decisions made by businesses.</li>
-                                <li>Ability to critically assess business decisions, applicable in financial analysis, investment strategies, and business consulting.</li>
-                                <li>Informed decision-making on asset management, considering legal and economic implications.</li>
+                                <li>Acquired linguistic resources and cross-disciplinary skills in French, applicable to working life and further studies.</li>
+                                <li>Gained knowledge of the French-speaking world, valuable for roles involving French-speaking markets, clients, or international operations.</li>
                             </ul>
-
-                            <span class="gray-1">Tech Stack</span>
-
-                            <div class="tech-list">
-                                <div class="tooltip">
-                                    <a href="https://www.microsoft365.com/" target="_blank">
-                                        <img src="/assets/svg/logos/ms-office.svg" alt="Mircosoft 365">
-                                    </a>
-                                    
-                                    <span class="tooltiptext">Microsoft 365</span>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
