--- a/public/css/components.css
+++ b/public/css/components.css
@@ -78,16 +78,14 @@ header {
 }
 
 /** OffCanvas Menu****/
-
+/**
 .off-canvas-menu {
-    position: fixed;
     top: 0;
     left: -250px;
     width: 250px;
     height: 100%;
     background-color: #333;
     color: white;
-    overflow-x: hidden;
     transition: 0.3s;
     padding-top: 60px;
 }
@@ -125,8 +123,9 @@ header {
 
 .off-canvas-menu.active {
     left: 0;
+    overflow-y: auto;
 }
-
+**/
 /** Buttons***/
 
 .btn-link {
