--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" type="image/x-icon" href="../Assets/Svg/favicon-logo.svg">
+    <link rel="icon" type="image/x-icon" href="/assets/svg/logos/favicon-logo.svg">
     <title>CV - Kevin Gomes</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
@@ -29,6 +29,6 @@
         </section>
     </main>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <script src="./script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
