--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -935,6 +935,40 @@
                         <div class="accordion-item">
                             <button class="accordion-header" aria-expanded="false">
                                 <div class="accordion-container">
+                                    <span class="gray-1"><b>C1</b> Advanced</span>
+                                    <span class="white-2">Business Management Tools</span>
+                                </div>
+
+                                <div class="accordion-container">
+                                    <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                                </div>
+                            </button>
+
+                            <div class="accordion-content" hidden>
+                                <ul class="skills-list">
+                                    <li>Extensive experience with MS Office 365 applications, particularly Excel, Access, and Word, critical for financial modeling, data management, and document preparation.</li>
+                                    <li>Ability to create complex spreadsheets, manage databases, and produce professional documents that support financial operations and decision-making.</li>
+                                </ul>
+
+                                <span class="gray-1">Tech Stack</span>
+
+                                <div class="tech-list">
+                                    <div class="tooltip">
+                                        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
+                                            <img src="/assets/svg/logos/ms-office.svg" alt="Microsoft 365">
+                                        </a>
+                                        
+                                        <span class="tooltiptext">Microsoft 365</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column-box">
+                        <div class="accordion-item">
+                            <button class="accordion-header" aria-expanded="false">
+                                <div class="accordion-container">
                                     <span class="gray-1"><b>B1</b> Intermediate</span>
                                     <span class="white-2">Web Development</span>
                                 </div>
@@ -1048,6 +1082,213 @@
                                         </a>
                                         
                                         <span class="tooltiptext">EJS</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column-box">
+                        <div class="accordion-item">
+                            <button class="accordion-header" aria-expanded="false">
+                                <div class="accordion-container">
+                                    <span class="gray-1"><b>C1</b> Advanced</span>
+                                    <span class="white-2">Data Analysis</span>
+                                </div>
+
+                                <div class="accordion-container">
+                                    <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                                </div>
+                            </button>
+
+                            <div class="accordion-content" hidden>
+                                <ul class="skills-list">
+                                    <li>Acquired basic knowledge of data analysis tools and techniques, including Excel and other statistical software.</li>
+                                    <li>Capable of deriving actionable insights from data, which is crucial for financial analysis, risk assessment, and decision-making.</li>
+                                    <li>Exposure to basic data visualization techniques, facilitating the presentation of financial data in clear, impactful ways for stakeholders</li>
+                                </ul>
+
+                                <span class="gray-1">Tech Stack</span>
+
+                                <div class="tech-list">
+                                    <div class="tooltip">
+                                        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
+                                            <img src="/assets/svg/logos/ms-office.svg" alt="Microsoft 365">
+                                        </a>
+                                        
+                                        <span class="tooltiptext">Microsoft 365</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    
+
+                    <div class="column-box">
+                        <div class="accordion-item">
+                            <button class="accordion-header" aria-expanded="false">
+                                <div class="accordion-container">
+                                    <span class="gray-1"><b>C1</b> Advanced</span>
+                                    <span class="white-2">Database Management</span>
+                                </div>
+
+                                <div class="accordion-container">
+                                    <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                                </div>
+                            </button>
+
+                            <div class="accordion-content" hidden>
+                                <ul class="skills-list">
+                                    <li>Experience with database management systems, enabling efficient organization and retrieval of financial data.</li>
+                                    <li>Knowledgeable in structuring databases to support financial reporting, client relationship management (CRM) systems, and inventory control.</li>
+                                </ul>
+
+                                <span class="gray-1">Tech Stack</span>
+
+                                <div class="tech-list">
+                                    <div class="tooltip">
+                                        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
+                                            <img src="/assets/svg/logos/ms-office.svg" alt="Microsoft 365">
+                                        </a>
+                                        
+                                        <span class="tooltiptext">Microsoft 365</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column-box">
+                        <div class="accordion-item">
+                            <button class="accordion-header" aria-expanded="false">
+                                <div class="accordion-container">
+                                    <span class="gray-1"><b>B2</b> Intermediate +</span>
+                                    <span class="white-2">Digital Communication Tools</span>
+                                </div>
+
+                                <div class="accordion-container">
+                                    <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                                </div>
+                            </button>
+
+                            <div class="accordion-content" hidden>
+                                <ul class="skills-list">
+                                    <li>Proficient in using tools like email, messaging apps, and virtual collaboration platforms to facilitate smooth and efficient communication.</li>
+                                    <li>Experienced in managing digital correspondence and coordinating virtual meetings, ensuring effective communication with clients and team members across different locations.</li>
+                                </ul>
+
+                                <span class="gray-1">Tech Stack</span>
+
+                                <div class="tech-list">
+                                    <div class="tooltip">
+                                        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
+                                            <img src="/assets/svg/logos/ms-office.svg" alt="Microsoft 365">
+                                        </a>
+                                        
+                                        <span class="tooltiptext">Microsoft 365</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column-box">
+                        <div class="accordion-item">
+                            <button class="accordion-header" aria-expanded="false">
+                                <div class="accordion-container">
+                                    <span class="gray-1"><b>B2</b> Intermediate +</span>
+                                    <span class="white-2">Graphic Design</span>
+                                </div>
+
+                                <div class="accordion-container">
+                                    <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                                </div>
+                            </button>
+
+                            <div class="accordion-content" hidden>
+                                <ul class="skills-list">
+                                    <li>Proficient in using professional graphic design software to create visually appealing presentations and marketing materials.</li>
+                                    <li>Able to design financial reports, brochures, and pitch decks that are both informative and visually engaging, enhancing communication with clients and investors.</li>
+                                </ul>
+
+                                <span class="gray-1">Tech Stack</span>
+
+                                <div class="tech-list">
+                                    <div class="tooltip">
+                                        <a href="https://affinity.serif.com/en-us/designer/" target="_blank">
+                                            <img src="/assets/svg/logos/designer-icon.svg" alt="Affinity Designer">
+                                        </a>
+                                        
+                                        <span class="tooltiptext">Affinity Designer</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column-box">
+                        <div class="accordion-item">
+                            <button class="accordion-header" aria-expanded="false">
+                                <div class="accordion-container">
+                                    <span class="gray-1"><b>B1</b> Intermediate</span>
+                                    <span class="white-2">Photo Editing</span>
+                                </div>
+
+                                <div class="accordion-container">
+                                    <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                                </div>
+                            </button>
+
+                            <div class="accordion-content" hidden>
+                                <ul class="skills-list">
+                                    <li>Basic photo editing skills using Affinity Photo, suitable for enhancing visual content for reports, presentations, and marketing materials.</li>
+                                    <li>Able to make simple adjustments, such as cropping, color correction, and layering, to improve the visual appeal of financial documents and online content.</li>
+                                </ul>
+
+                                <span class="gray-1">Tech Stack</span>
+
+                                <div class="tech-list">
+                                    <div class="tooltip">
+                                        <a href="https://affinity.serif.com/en-us/photo/" target="_blank">
+                                            <img src="/assets/svg/logos/designer-icon.svg" alt="Affinity Designer">
+                                        </a>
+                                        
+                                        <span class="tooltiptext">Affinity Photo</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column-box">
+                        <div class="accordion-item">
+                            <button class="accordion-header" aria-expanded="false">
+                                <div class="accordion-container">
+                                    <span class="gray-1"><b>A1</b> Basic</span>
+                                    <span class="white-2">Video Editing</span>
+                                </div>
+
+                                <div class="accordion-container">
+                                    <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                                </div>
+                            </button>
+
+                            <div class="accordion-content" hidden>
+                                <ul class="skills-list">
+                                    <li>Familiar with basic video editing techniques using DaVinci Resolve, applicable for creating and editing marketing content, corporate videos, or presentations within financial institutions.</li>
+                                    <li>Capable of performing simple video tasks, such as trimming, transitions, and basic color correction, which can be useful in producing professional-quality visual content for client presentations and promotional materials.</li>
+                                </ul>
+
+                                <span class="gray-1">Tech Stack</span>
+
+                                <div class="tech-list">
+                                    <div class="tooltip">
+                                        <a href="https://www.blackmagicdesign.com/products/davinciresolve" target="_blank">
+                                            <img src="/assets/svg/logos/davinci.svg" alt="Affinity Designer">
+                                        </a>
+                                        
+                                        <span class="tooltiptext">DaVinci Resolve</span>
                                     </div>
                                 </div>
                             </div>
