--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -861,6 +861,28 @@
                         <button class="accordion-header" aria-expanded="false">
                             <div class="accordion-container">
                                 <div class="gray-1"><b>C2</b> Proficient</div>
+                                <span class="white-2">Luxembourgish</span>
+                            </div>
+
+                            <div class="accordion-container">
+                                <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                            </div>
+                        </button>
+
+                        <div class="accordion-content" hidden>
+                            <ul class="skills-list">
+                                <li>C2 skill level in Luxembourgish, reflecting near-native fluency and understanding.</li>
+                                <li>Grew up with this language, which was not part of the formal high school curriculum, enhancing the ability to engage with Luxembourgish-speaking stakeholders and communities in the financial sector.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="column-box">
+                    <div class="accordion-item">
+                        <button class="accordion-header" aria-expanded="false">
+                            <div class="accordion-container">
+                                <div class="gray-1"><b>C2</b> Proficient</div>
                                 <span class="white-2">German</span>
                             </div>
 
@@ -922,6 +944,27 @@
                     </div>
                 </div>
 
+                <div class="column-box">
+                    <div class="accordion-item">
+                        <button class="accordion-header" aria-expanded="false">
+                            <div class="accordion-container">
+                                <div class="gray-1"><b>B2</b> Upper Intermediate</div>
+                                <span class="white-2">Portuguese</span>
+                            </div>
+
+                            <div class="accordion-container">
+                                <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                            </div>
+                        </button>
+
+                        <div class="accordion-content" hidden>
+                            <ul class="skills-list">
+                                <li>Native speaker with a B2 skill level according to the CEFR, capable of expressing opinions and arguments effectively.</li>
+                                <li>While not studied in high school, this proficiency supports communication with Portuguese-speaking clients and markets in the financial sector.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="container">
@@ -1251,7 +1294,7 @@
                                 <div class="tech-list">
                                     <div class="tooltip">
                                         <a href="https://affinity.serif.com/en-us/photo/" target="_blank">
-                                            <img src="/assets/svg/logos/designer-icon.svg" alt="Affinity Designer">
+                                            <img src="/assets/svg/logos/photo-icon.svg" alt="Affinity Designer">
                                         </a>
                                         
                                         <span class="tooltiptext">Affinity Photo</span>
@@ -1291,6 +1334,78 @@
                                         <span class="tooltiptext">DaVinci Resolve</span>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flex-title">
+                    <h4>Soft</h4>
+                    <span class="title-1">Skills</span>
+                </div>
+
+                <div class="column-list">
+                    <div class="column-box">
+                        <div class="accordion-item">
+                            <button class="accordion-header" aria-expanded="false">
+                                <div class="accordion-container">
+                                    <span class="white-2">Analytical Thinking</span>
+                                </div>
+    
+                                <div class="accordion-container">
+                                    <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                                </div>
+                            </button>
+    
+                            <div class="accordion-content" hidden>
+                                <ul class="skills-list">
+                                    <li>Ability to dissect complex financial data and extract meaningful insights.</li>
+                                    <li>Skilled in identifying trends, patterns, and potential risks, leading to informed decision-making</li>
+                                    <li>Proficient in evaluating investment opportunities and assessing financial health.</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column-box">
+                        <div class="accordion-item">
+                            <button class="accordion-header" aria-expanded="false">
+                                <div class="accordion-container">
+                                    <span class="white-2">Attention to Detail</span>
+                                </div>
+    
+                                <div class="accordion-container">
+                                    <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                                </div>
+                            </button>
+    
+                            <div class="accordion-content" hidden>
+                                <ul class="skills-list">
+                                    <li>Meticulous in reviewing financial documents, ensuring accuracy in reports, budgets, and forecasts.</li>
+                                    <li>Capable of detecting discrepancies and errors in data, preventing costly mistakes in financial operations.</li>
+                                    <li>Consistently ensures compliance with financial regulations and standards.</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column-box">
+                        <div class="accordion-item">
+                            <button class="accordion-header" aria-expanded="false">
+                                <div class="accordion-container">
+                                    <span class="white-2">Problem-Solving</span>
+                                </div>
+    
+                                <div class="accordion-container">
+                                    <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                                </div>
+                            </button>
+    
+                            <div class="accordion-content" hidden>
+                                <ul class="skills-list">
+                                    <li>Adept at identifying financial challenges and developing strategic solutions.</li>
+                                    <li>Skilled in applying critical thinking to resolve conflicts and optimize financial outcomes.</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
