--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -607,7 +607,7 @@
                                 </ul>
 
                                 <p>For languages:</p>
-                                <a class="normal-link" href="https://cefr.eu/" target="_blank">www.coe.int<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
+                                <a class="normal-link" href="https://cefr.eu/" target="_blank">www.cefr.eu<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </div>
                         </div>
                     </div>
@@ -1349,6 +1349,7 @@
                         <div class="accordion-item">
                             <button class="accordion-header" aria-expanded="false">
                                 <div class="accordion-container">
+                                    <span class="gray-1">Finance</span>
                                     <span class="white-2">Analytical Thinking</span>
                                 </div>
     
@@ -1371,6 +1372,7 @@
                         <div class="accordion-item">
                             <button class="accordion-header" aria-expanded="false">
                                 <div class="accordion-container">
+                                    <span class="gray-1">Finance</span>
                                     <span class="white-2">Attention to Detail</span>
                                 </div>
     
@@ -1393,6 +1395,7 @@
                         <div class="accordion-item">
                             <button class="accordion-header" aria-expanded="false">
                                 <div class="accordion-container">
+                                    <span class="gray-1">Finance</span>
                                     <span class="white-2">Problem-Solving</span>
                                 </div>
     
@@ -1426,23 +1429,32 @@
 
         <div class="two-columns">
             <div class="container">
-                <img src="/assets/img/library.png" alt="pile of books">
+                <div class="in-touch">
+                    <div>
+                        <a href="mailto:gomeskevin.office@gmail.com">
+                            <img src="/assets/svg/logos/gmail.svg" alt="Gmail">
+                        </a>
+                    </div>
+
+                    <div>
+                        <a href="https://www.linkedin.com/in/kevin-gpa/" target="_blank">
+                            <img src="/assets/svg/logos/linkedin.svg" alt="LinkedIn">
+                        </a>
+                    </div>
+                </div>
             </div>
 
             <div class="container">
                 <div class="text">
                     <h3>
-                        <span>Life long learning</span>
-                        <span>is essential to</span>
-                        <span>succeed nowadays</span>
+                        <span>Get in touch</span>
+                        <span>with me</span>
                     </h3>
-                    <h5>My problem-solving abilities enable me to address challenges methodically.</h5>
+                    <h5>Connect with me on my social media profile</h5>
                     <p>
-                        My educational journey has endowed me with essential soft skills that are vital for professional 
-                        success. While I may not be the most socially adept, I excel in written communication, allowing me 
-                        to articulate ideas clearly. My problem-solving abilities enable me to address challenges with a 
-                        logical and strategic approach. Additionally, I am a quick learner, adaptable, and possess a strong 
-                        work ethic.
+                        I'm always open to discussing new opportunities, collaborations, or any questions you may 
+                        have. Whether you're interested in connecting about financial projects, seeking advice, or 
+                        just want to have a conversation, feel free to reach out.
                     </p>
                 </div>
             </div>
